# sticker_api

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md
src/: base_model.py  base_router.py
src/data/: stickers.json  sticks.json  users.json
src/models/: stick.py  sticker.py  user.py
src/routers/: stick.py  sticker.py  user.py
